fix text overflow

--- a/airbyte-webapp/src/components/ui/DatePicker/DatePicker.module.scss
+++ b/airbyte-webapp/src/components/ui/DatePicker/DatePicker.module.scss
@@ -29,6 +29,10 @@
   z-index: z-indices.$datepicker;
 }
 
+.input {
+  padding-right: 25px;
+}
+
 :global(.react-datepicker) {
   display: flex;
   color: colors.$dark-blue-900;
